static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Londrina+Shadow&family=Montserrat&family=Pacifico&family=Poiret+One&family=Raleway&family=Ribeye+Marrow&display=swap');

body {
    margin: 0;
    padding: 0;
    text-align: center;
    font-family: "Raleway", sans-serif;
    background-image: url("../images/cinema-bg.png");
    background-position: center center;
    background-size: cover;
    width: 100%;
    height: 90vh;
    background-repeat: no-repeat;
    background-attachment: fixed;
}

/* --------------- BASE TEMPLATE --------------- */
.flashes {
    color: #555555;
    background-color: #fafafa;
    padding: 5px;
    border: 4px double #F6B86F;
    border-radius: 0.5rem;
    margin: 5px;
}

.text-container {
    color: #fafafa;
    background-color: #555555;
}

.div-header {
    margin-top: 0px;
    margin-bottom: 50px;
    height: 30px;
    padding: 4px;
    font-size: 90%;
}

/* --------------- NAVBAR --------------- */
.nav-bar {
    border-bottom: 4px dotted #fafafa;
}

.movie-journal-icon {
    color: #fafafa;
    text-shadow: 2px -2px #418a7b;
    font-family: "Londrina Shadow", cursive;
    font-weight: bold;
    letter-spacing: 1px;
}


/* --------------- BACKGROUNDS & IMAGES --------------- */
.home-header-bg {
    background-image: url("../images/home-bg.png");
    min-height: 75vh;
    background-size: cover;
}

.pages-header-bg {
    background-image: url("../images/header.png");
    min-height: 10vh;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

.movie-card-display {
    background-image: url("../images/card-bg8.png");
    background-size: cover;
    margin: 5px 0;
    min-height: 100px;
    padding: 0;
}

/* --------------- HEADERS --------------- */
.home-header {
    margin: 30px;
    color: #fafafa;
    text-shadow: 4px -4px #418a7b;
    font-family: "Londrina Shadow", cursive;
    font-weight: bold;
    font-size: 8rem;
    letter-spacing: 10px;
}

.pages-header {
    margin: 10px;
    color: #fafafa;
    text-shadow: 2px -2px #418a7b;
    font-family: "Londrina Shadow", cursive;
    font-weight: bold;
    font-size: 3rem;
    letter-spacing: 5px;
    text-align: right;
}

.movie-journal-icon img{
    width: 40px;
    height: 40px;
    margin-left: 20px;
}

/* --------------- FOOTER --------------- */
.footer-container {
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    margin-top: 20px;
    border-top: 4px dotted #fafafa;
}

.footer-element {
    text-align: center;
    vertical-align: bottom;
    margin: 14px 0;
    font-size: 14px;
}

.footer-element p {
    margin-top: 5px;
}

.social-media li a i {
    color: #fafafa;
    background-color: #418a7b;
    font-size: 20px;
    width: 30px;
    height: 30px;
    padding: 12px 0;
    border-radius: 20%;
    line-height: 10px;
    text-align: center;
    transition: all 0.2s ease-in-out;
    -moz-transition: all 0.2s ease-in-out;
    -webkit-transition: all 0.2s ease-in-out;
    -o-transition: all 0.2s ease-in-out;
}

.social-media li a i:hover {
    color: #fafafa;
    background-color: #f6b86f;
}

/* --------------- BUTTONS --------------- */
.green-btn {
    background-color: #418a7b;
    color: #fafafa;
    width: 150px;
}

.orange-btn {
    padding: 4px;
    font-size: 70%;
    min-width: 70px;
    background-color: #F6B86F;
    color: #fafafa;
}

.plus-btn {
    color: #F6B86F;
    font-size: 1.2rem;
}

.profile-btn {
    padding: 6px;
    min-width: 80px;
    background-color: #418a7b;;
    color: #fafafa;
}


/* --------------- DISPLAY MOVIES CARDS --------------- */
.card-body {
    padding: 1.25rem 0.4rem 0;
}

.card-img {
    max-height: 180px;
    width: auto;
    max-width: 100%;
    border-radius: 0.5rem;
}

.card-title {
    margin-top: 10px;
    margin-bottom: 0;
        font-size: small;
}

.card-footer {
    padding-top: 0;
    background-color: transparent;
    border-top: transparent;
}





.form-login {
    margin-top: 45px;
    padding: 30px;
}

.form-login a {
    color: darkgoldenrod;
    text-decoration: none;
}

.form-login a:hover {
    font-size: 110%;
}

.form-icon {
    color: orange;
}

/* --------------- MOVIE PAGES --------------- */
.movie-page {
    padding: 20px;
}

.movie-page-row {
    border-radius: 0.5rem;
    margin-top: 25px;
}

.movies-header {
    margin: 30px 0;
    color: #fafafa;
    text-shadow: 2px -2px #418a7b;
    font-family: "Londrina Shadow", cursive;
    font-weight: bold;
    font-size: 4rem;
    letter-spacing: 5px;
    text-align: left;
}

.profile-header {
    margin: 40px;
    height: 30px;
}



.movie-info {
    font-weight: bold;
}

.movie-info-link {
    color: #418a7b;
}

.movie-info-link:hover {
    text-decoration: none;
}


.card-header {
    padding: 2px;
    margin-bottom: 10px;
    background-color: transparent;
    border-bottom: none;
}



.movie-page-row {
    padding: 20px;
}

.movie-synopsis {
    max-lines: 2;
}

.movie-page-title {
    color: orange;
    padding: 30px 0;
}

.movie-page-img {
    margin: 10px 0;
    min-width: 200px;
    max-width: 100%;
    max-height: 350px;
    border-radius: 0.5rem;
}

.watch-lists-collapse {
    width: 100%;
    color: orange;
}

.reviews-title {
    margin: 30px auto;
    text-align: center;
    max-width: 600px;
    position: relative;
}

/* --------------- SHOW MORE/LESS --------------- */
.comment {
    padding-bottom: 0;
    margin: 5px;
    transition: all 0.2s;
    margin: 0 auto;
}

a.morelink {
	text-decoration:none;
    outline: none;
    color: #418a7b;
}

.morecontent span {
	display: none;
}




/* .reviews-title:before {
    content: "";
    display: block;
    width: 120px;
    height: 2px;
    background: orange;
    position: absolute;
    left: 0;
    top: 50%;
    z-index: -5;
}

.reviews-title:after {
    content: "";
    display: block;
    width: 120px;
    height: 2px;
    background: orange;
    position: absolute;
    right: 0;
    top: 50%;
    z-index: -5;
}

.span {
    background: white;
} */

.comment-section {
    padding: 20px 0;
}

.comment-text {
    padding-top: 24px;
}

.comment-footer {
    color: grey;
}

/* --------------- ADD & EDIT MOVIE PAGES --------------- */

.review-form {
    border-radius: 0.5rem;
    padding: 10px;
    padding: 30px;
    margin-bottom: 120px;
    margin-top: 30px;
}

.form-movie-input {
    padding: 10px 0;
}

.form-row-div {
    margin-top: 20px;

}

/* --------------- SEARCH PAGE --------------- */
.search-container {
}

.search-result {
    border-radius: 0.5rem;
    padding: 20px;
    margin: 10px 0;
}

.search-result h4 {
    font-size: 36px;
    color: #fafafa;
}

.search-img {
    max-height: 250px;
    width: auto;
    max-width: 100%;
    border-radius: 0.5rem;
}

.suggestion-container {
    border-radius: 0.5rem;
    padding: 20px;
    margin-top: 30px;
    margin-bottom: 100px;
}

.suggestion-form {
    margin: 30px 0;
}

.suggestion-item {
    margin-top: 10px;
}


/* --------------- MEDIA QUERIES --------------- */

/* Media queries for extra small devices */
@media only screen and (max-width: 600px) {
    body {
        font-size: 90%;
    }
    .review-form{
        padding: 10px 0;
    }
    .home-header {
        margin: 70px 0;
        font-size: 4.5rem;
        letter-spacing: 5px;
        text-align: right;
    }
    .search-result h4 {
        font-size: 18px;
    }
}

/* Media queries for small devices */
@media only screen and (min-width: 600px) {
    .card-body {
        padding: 0.3;
    }
    .home-header {
        text-align: right;
    }
}

/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {
    .home-header {
        text-align: right;
    }
}

/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 992px) {

}

/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 1200px) {
    
}

